--- a/navbar.html
+++ b/navbar.html
@@ -34,10 +34,10 @@
     <div id="navbar">
         <div>Reebok</div>
         <div>
-            <div><a href="mens.html">Men</a></div>
-            <div><a href="#">Men</a></div>
-            <div><a href="login.html">Login</a></div>
-            <div><a href="signup.html">Signup</a></div>
+            <div>Men</div>
+            <div>Women</div>
+            <div>Login</div>
+            <div>Signup</div>
         </div>
     </div>
 </body>
