some minor changes

--- a/navbar.html
+++ b/navbar.html
@@ -26,7 +26,10 @@
     #navbar>div:last-child>div {
         margin-left: 60px;
     }
-
+    a{
+        text-decoration: none;
+        color: aliceblue;
+    }
 </style>
 
 <body>
@@ -35,7 +38,7 @@
         <div>Reebok</div>
         <div>
             <div><a href="mens.html">Men</a></div>
-            <div><a href="#">Men</a></div>
+            <div><a href="#">Women</a></div>
             <div><a href="login.html">Login</a></div>
             <div><a href="signup.html">Signup</a></div>
         </div>
